# Ard-api

./: db.sqlite3  gitCode.txt  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
pages/: forms.py  urls.py  views.py
project/: settings.py  urls.py
static/css/: base.css
staticfiles/css/: base.css
templates/: Dashboard.html  DataDownload.html  Faq.html  Home.html  Map.html  Media.html  Resource.html  SensorView.html  _base.html  home.html  navbar.html
templates/account/: login.html  logout.html
templatetags/: custom_filters.py
