[tool.poetry]
name = "ard-api"
version = "0.1.0"
description = ""
authors = ["sunilregmi233 <sunilregmi223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
